# wcet-probe

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
bench/: bench_overhead.cpp
docs/: architecture.mmd
examples/: matrix_multiply.cpp  sensor_fusion_stub.cpp
include/wcet/: clock.hpp  cpu_control.hpp  harness.hpp  probe.hpp  ring_buffer.hpp  trace.hpp
src/: clock.cpp  cpu_control.cpp  harness.cpp  main.cpp  ring_buffer.cpp  trace.cpp
tests/: test_clock.cpp  test_probe.cpp  test_ring_buffer.cpp  test_trace.cpp
tools/: wcet_analyze.py
